# teamscheire_tatjana

./: .gitignore  README.md
3dmodel/: Body2_simple.stl  Tatysound_dummy v0.stl  Tatysound_enclosure v6.f3d  dop_usb mini.stl  dop_usbc.stl  part1.stl
arduino/i2s_test2/esp32-i2s/: esp32-i2s.ino
arduino/mems_mic_test/: BLESerial.cpp  iir_filter.h  mems_mic_test.ino
audio/: pcm_w.raw  pcm_w01.raw  pcm_w02.raw  pcm_w04.raw  pcm_w05e.raw  pcm_w16.raw  pcm_wu8.raw
bluemic/: Release_Notes.html
bluemic/Documentation/: STSW-BLUEMIC-1_documentation.chm
bluemic/Drivers/BSP/Components/lsm6dsl/: LSM6DSL_ACC_GYRO_driver.h  LSM6DSL_ACC_GYRO_driver_HL.h
bluemic/Drivers/BSP/STEVAL-BLUEMIC1/: steval_bluemic1.c  steval_bluemic1.h  steval_bluemic1_accelero.c  steval_bluemic1_accelero.h  steval_bluemic1_audio_in.c  steval_bluemic1_audio_in.h  steval_bluemic1_gyro.c  steval_bluemic1_gyro.h
bluemic/Middlewares/ST/BlueNRG-1_BlueVoice_Library/Inc/: bluevoice_adpcm_bnrg1.h
bluemic/Project/BlueNRG1_PER_BlueVoice/inc/: BlueNRG1_conf.h  BlueNRG1_it.h
bluemic/Project/BlueNRG1_PER_BlueVoice/src/: bluevoice_app.c  inertial_app.c
bluemic/Project/TatySound/: BlueNRG1.ld  CMakeLists.txt
bluemic/Project/TatySound/inc/: BlueVoice_config.h  bluevoice_app.h  inertial_app.h  peripheral_mngr_app.h
bluemic/Project/TatySound/src/: BlueNRG1_it.c  main.c  peripheral_mngr_app.c
cordova/: .gitignore  readme.md
cordova/TatySound/: config.xml  package-lock.json  package.json
cordova/TatySound/res/xml/: network_security_config.xml
cordova/TatySound/www/: index.html
cordova/TatySound/www/css/: index.css
cordova/TatySound/www/js/: app.js  bluetooth.js  charting.js  mqttclient.js  noiselevel.js  storage.js
debug/: plot_data.py  sounddata copy 2.csv  sounddata copy.csv  sounddata.csv
firmware/: readme.md
firmware/lib/: LSM303AGR_acc_driver.h  ble_app.c  ble_app.h  i2c.c
firmware/tatysound/: app_pwm.c  app_pwm.h  config.h  drv_audio.c  drv_audio.h  main.c  nrf_calendar.c  sdk_config.h
firmware/tatysound/octa/s132/ses/: disassembly  flash_placement.xml  tatysound_octa.emProject  tatysound_octa.emSession
hardware/: bomBLEsoundV1.xlsx
hardware/BLEsoundV11/: bomBLEsoundV1.xlsx  untitled.brd  untitled.sch
python/: calibratie.xlsx  view_audio.py
tizen/workspace/: .gitignore
tizen/workspace/SoundViewer/: .cproject  .project  project_def.prop  tizen-manifest.xml
tizen/workspace/SoundViewer/.sign/: .manifest.tmp  author-signature.xml  signature1.xml
tizen/workspace/SoundViewer/inc/: soundviewer.h
tizen/workspace/SoundViewer/src/: soundviewer.c
tizen/workspace/TatySoundService/: .cproject  .gitignore  .project  project_def.prop  tizen-manifest.xml
tizen/workspace/TatySoundService/inc/: communication.h  sound.h  tatysoundservice.h
tizen/workspace/TatySoundService/src/: communication.c  sound.c  tatysoundservice.c
tizen/workspace/TatySoundViewer/: .cproject  .gitignore  .project  .tproject  project_def.prop  tizen-manifest.xml
tizen/workspace/TatySoundViewer/inc/: tatysoundviewer.h  view.h  view_defines.h
tizen/workspace/TatySoundViewer/res/edje/: edc_defines.h  main.edc
tizen/workspace/TatySoundViewer/src/: tatysoundviewer.c  view.c
tizen/workspace/TatySoundWebViewer/: .project  .tproject  TatySoundWebViewer.wgt  config.xml  index.html
tizen/workspace/TatySoundWebViewer/.package/: config.xml
tizen/workspace/TatySoundWebViewer/css/: style.css
tizen/workspace/TatySoundWebViewer/js/: main.js  page.js
